MyDemoOrg/force-app/main/default/objects/signature__Google_Process__c/signature__Google_Process__c.object-meta.xml
<CustomObject>
    <description>Processing Record of Templates in a Merge</description>
    <label>ß Process</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Process #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ß Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>