MyDemoOrg/force-app/main/default/objects/signature__Google_Process__c/fields/signature__ExportType__c.field-meta.xml
<CustomField>
    <fullName>signature__ExportType__c</fullName>
    <label>ExportType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>