MyDemoOrg/force-app/main/default/objects/signature__Google_Process__c/fields/signature__Message__c.field-meta.xml
<CustomField>
    <fullName>signature__Message__c</fullName>
    <label>Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>