MyDemoOrg/force-app/main/default/objects/signature__Google_Process__c/fields/signature__Signature__c.field-meta.xml
<CustomField>
    <fullName>signature__Signature__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ß Signature</label>
    <referenceTo>signature__Signature__c</referenceTo>
    <relationshipName>Google_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>