MyDemoOrg/force-app/main/default/objects/signature__Google_Process__c/fields/signature__Steps__c.field-meta.xml
<CustomField>
    <fullName>signature__Steps__c</fullName>
    <label>Steps</label>
    <length>255</length>
    <type>Text</type>
</CustomField>